--- a/Register.html
+++ b/Register.html
@@ -13,7 +13,7 @@
 <body>
 	<div class="navbar bg-base-100">
 		<div class="flex-1">
-		  <a class="btn btn-ghost text-xl">Softworks LLC. | By pulawat6680</a>
+		  <a class="btn btn-ghost text-xl">Kaojao888 โอนไว</a>
 		</div>
 		<div class="flex-none">
 		  <ul class="menu menu-horizontal px-1">
