--- a/homepage.html
+++ b/homepage.html
@@ -81,7 +81,7 @@
     <body>
         <div class="navbar bg-base-100">
             <div class="flex-1">
-              <a id="lightshot" class="btn btn-ghost text-xl">Softworks LLC. | By pulawat6680</a>
+              <a id="lightshot" class="btn btn-ghost text-xl">Kaojao888 โอนไว</a>
             </div>
             <div class="flex-none">
               <ul class="menu menu-horizontal px-1">
