--- a/inventorycrud.html
+++ b/inventorycrud.html
@@ -11,7 +11,7 @@
 <body class="bg-gray-100 p-6">
     <div class="navbar bg-base-100">
         <div class="flex-1">
-          <a class="btn btn-ghost text-xl">Softworks LLC. | By pulawat6680</a>
+          <a class="btn btn-ghost text-xl">Kaojao888 โอนไว</a>
         </div>
         <div class="flex-none">
           <ul class="menu menu-horizontal px-1">
