--- a/usercrud.html
+++ b/usercrud.html
@@ -18,7 +18,7 @@
   <div id="coolcontainer" class="container bg-white p-6 rounded-lg shadow-lg w-full max-w-4xl">
     <div class="navbar bg-base-100">
         <div class="flex-1">
-          <a class="btn btn-ghost text-xl">Softworks LLC. | By pulawat6680</a>
+          <a class="btn btn-ghost text-xl">Kaojao888 โอนไว</a>
         </div>
         <div class="flex-none">
           <ul class="menu menu-horizontal px-1">
